Added neat thing that makes mobile phone go for media queries LOL

--- a/nifty.html
+++ b/nifty.html
@@ -5,7 +5,8 @@
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<link rel="stylesheet" type="text/css" href="media.css">
 		<link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
-	</head>
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
+  </head>
 	<body>
 		<video class="video" posted="fallback-background.png" autoplay="true" height="auto" id="video-loop-video" loop="true" width="100%">
 			<source src="nifty_background_video.webmhd.webm" type="video/webm">
