make nifty.html be index.html and add link urls

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <div class="nifty-logo">Nifty</div>
 			<ul class="listen">
 				<li class="hq-wav">
-					<a href="#">
+					<a href="http://s3.amazonaws.com/badbunga/Nifty.zip" target="_blank">
 						<img src="wav-icon.png" />
 						High Quality (WAV)
 					</a>
 				</li>
 				<li class="soundcloud">
-					<a href="#">
+					<a href="https://soundcloud.com/niftymusic/nifty" target="_blank">
 						<img src="soundcloud-logo.png" /> 
 						Soundcloud
 					</a>
@@ -31,7 +31,7 @@
 
 			<ul class="watch">
 				<li class="youtube">
-					<a href="#">
+					<a href="https://www.youtube.com/watch?v=mM02IDwPH8g" target="_blank">
 						<img src="youtube-logo.png" />
 						Youtube
 					</a>
