--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 			<ul class="watch">
 				<li class="vimeo">
-					<a href="#">
+					<a href="https://vimeo.com/104433217" target="_blank">
 						<img src="vimeo-logo.png" />
 						Vimeo
 					</a>
